--- a/src/main/resources/creative_project/Information_Food.fxml
+++ b/src/main/resources/creative_project/Information_Food.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="444.0" prefWidth="982.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="creative_project.Information_Food">
     <children>
-        <ComboBox fx:id="cb_food_Do" layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" promptText="도 선택">
+        <ComboBox fx:id="cb_food_Do" layoutX="14.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" onAction="#setSiInfo"  promptText="도 선택">
             <items>
                 <FXCollections fx:factory="observableArrayList">
                     <String fx:value="경기도" />
@@ -36,7 +36,7 @@
                 </FXCollections>
             </items>
         </ComboBox>
-        <ComboBox fx:id="cb_food_Si" layoutX="117.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0" onAction="#setSiInfo" promptText="시 선택" />
+        <ComboBox fx:id="cb_food_Si" layoutX="117.0" layoutY="12.0" prefHeight="26.0" prefWidth="93.0"  promptText="시 선택" />
         <TextField fx:id="tf_search_food" layoutX="407.0" layoutY="16.0" promptText="음식점명, 관광지 분류, 등등" />
         <Button fx:id="btn_search_food" layoutX="576.0" layoutY="16.0" mnemonicParsing="false" onAction="#view_search_food" text="검색" />
         <ScrollPane layoutX="2.0" layoutY="51.0" prefHeight="266.0" prefWidth="632.0">
