--- a/src/main/resources/creative_project/Manager_ModifyRequireList.fxml
+++ b/src/main/resources/creative_project/Manager_ModifyRequireList.fxml
@@ -17,9 +17,10 @@
                             <children>
                                 <TableView fx:id="tv_modify_touristSpot_requireList" prefHeight="264.0" prefWidth="542.0">
                                     <columns>
-                                        <TableColumn fx:id="tc_touristSpotName" prefWidth="114.0" text="관광지 이름" />
-                                        <TableColumn fx:id="tc_touristSpotAddress" prefWidth="171.0" text="주소" />
-                                        <TableColumn fx:id="tc_touristSpot_why_require" prefWidth="256.0" text="요청 사유" />
+                                        <TableColumn fx:id="tc_touristSpotName" prefWidth="104.0" text="관광지 이름" />
+                                        <TableColumn fx:id="tc_touristSpotAddress" prefWidth="173.0" text="주소" />
+                                        <TableColumn fx:id="tc_touristSpot_why_require" prefWidth="208.0" text="요청 사유" />
+                              <TableColumn fx:id="tc_touristSpot_sort" prefWidth="54.0" text="분류" />
                                     </columns>
                                 </TableView>
                             </children></AnchorPane>
@@ -33,7 +34,8 @@
                                     <columns>
                                         <TableColumn fx:id="tc_restaurantName" prefWidth="122.0" text="상호명" />
                                         <TableColumn fx:id="tc_restaurantAddress" prefWidth="177.0" text="주소" />
-                                        <TableColumn fx:id="tc_restaurant_why_require" prefWidth="242.0" text="요청 사유" />
+                                        <TableColumn fx:id="tc_restaurant_why_require" prefWidth="197.0" text="요청 사유" />
+                              <TableColumn fx:id="tc_restaurant_sort" prefWidth="45.0" text="분류" />
                                     </columns>
                                 </TableView>
                             </children></AnchorPane>
